--- a/user-interface/src/Components/Orders/index.css
+++ b/user-interface/src/Components/Orders/index.css
@@ -1,4 +1,4 @@
-.order-card {
+.buy-card {
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
@@ -8,38 +8,35 @@
     transition: 0.3s;
   }
   
-  .order-card:hover {
+  .buy-card:hover {
     box-shadow: 0 0 20px rgba(238, 33, 2, 0.7);
     transform: scale(1.1);
     transition: 0.3s;
   }
-  
-  
-  .order-card h2 {
-    color: white;
-    font-size: 20px;
-  }
-  
-  .order-card p {
-    color: white;
-    font-size: 15px;
-  }
-  
-  .project-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  
-  .head{
-    color: white;
-    font-size: 50px;
+
+  .sell-card {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(45, 7, 195, 0.3);
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    display: inline-block;
+    transition: 0.3s;
   }
+  
+  .sell-card:hover {
+    box-shadow: 0 0 20px rgba(31, 7, 218, 0.7);
+    transform: scale(1.1);
+    transition: 0.3s;
+  }
+
+  .container{
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+
+  
+ 
 
 
