--- a/user-interface/src/sections/PromptInput/index.css
+++ b/user-interface/src/sections/PromptInput/index.css
@@ -18,7 +18,9 @@ input{
     width: 300px;
     height: 100px;
     vertical-align: top;
-    text-align: top;
+    text-align: left;
+    
+    
 }
 
 .inputDiv {
