--- a/user-interface/src/Components/OrderBox/index.css
+++ b/user-interface/src/Components/OrderBox/index.css
@@ -3,6 +3,10 @@
     height: 300px;
     overflow: auto;
     border: 1px solid #ccc;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    background-color: white;
   }
   
   .scrollable-box {
