--- a/user-interface/src/sections/PromptInput/index.css
+++ b/user-interface/src/sections/PromptInput/index.css
@@ -46,11 +46,16 @@ input{
 
 .message-container {
     border: 1px solid #333;
-    flex-wrap: wrap;
+    display: 1;
     margin: 15px;
     padding: 20px;
     width: 900px;
     height: 50px;
-    align-items: left;
+    align-items: center;
     background-color: #e7e3e9;
+    justify-content: center;
+    align-content: center;
+    
+    
+    
   }
